template de email em portugues

--- a/templates/email/password_reset_email.html
+++ b/templates/email/password_reset_email.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Password Reset Email</title>
+    <title>E-mail de troca de senha</title>
 </head>
 <body>
     <p>Hello,</p>
-    <p>We've received a request to reset your password. Please click on the link below to reset your password:</p>
-    <p><a href="{{ password_reset_url }}">Reset Password</a></p>
-    <p>If you did not request this password reset, you can safely ignore this email.</p>
-    <p>Best regards,</p>
-    <p>Your Application Team</p>
+    <p>Nos recebemos uma solicitação para troca de senha. Por favor click no link abaixo para trocar sua senha:</p>
+    <p><a href="{{ password_reset_url }}">Trocar a senha</a></p>
+    <p>Caso não tenha solicitado isso, você pode ingnorar esse email.</p>
+    <p>Atenciosamente,</p>
+    <p>Seu time de desenvolvimento</p>
 </body>
 </html>
